--- a/WebApplication3/index.html
+++ b/WebApplication3/index.html
@@ -1,4 +1,4 @@
-<html ng-app="app">
+<html ng-app="psMovies">
 
 <head>
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
